# house-agent

./: .mcp.json  CLAUDE.md
agent_backend/: .gitignore  add_meal.py  agent.py  main.py  pyproject.toml
frontend/: CLAUDE.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddMealModal.tsx  ChatButton.tsx  ChatWindow.tsx  LiveTranscript.tsx  PlotWindow.tsx  VoiceIndicator.tsx
frontend/components/charts/: DailyCaloriesChart.tsx  MealBreakdownChart.tsx  WeeklyTrendsChart.tsx
frontend/hooks/: useMeals.ts  useRealtimeSTT.ts  useVoiceAssistant.ts  useWakeWord.ts  useWebSocket.ts
frontend/lib/: supabase.ts
frontend/public/: audio-ring-buffer-processor.js
